<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopwatchActivity">

    <TextView
        android:id="@+id/stopwatch_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70sp"
        android:text="@string/title_activity_stopwatch"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/stopwatch_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_title_textView"
        android:layout_marginTop="130sp"
        android:text="@string/default_time_activity_stopwatch"
        android:textSize="70sp"
        android:textColor="@color/black"
        />

    <ImageButton
        android:id="@+id/play_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/stop_imageButton"
        app:layout_constraintEnd_toStartOf="@id/pause_imageButton"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_time_textView"
        android:layout_marginTop="100sp"
        android:src="@drawable/round_play_circle_70"
        android:background="@color/white"
        android:contentDescription="@string/play_image_button_contentDescription"
        />

    <ImageButton
        android:id="@+id/stop_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play_imageButton"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_time_textView"
        android:layout_marginTop="100sp"
        android:src="@drawable/baseline_stop_circle_70"
        android:background="@color/white"
        android:contentDescription="@string/stop_image_button_contentDescription"
        />

    <ImageButton
        android:id="@+id/pause_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/play_imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_time_textView"
        android:layout_marginTop="100sp"
        android:src="@drawable/baseline_pause_circle_24"
        android:background="@color/white"
        android:contentDescription="@string/pause_image_button_contentDescription"
        />

</androidx.constraintlayout.widget.ConstraintLayout>